✅ KOMPLETT: Funktionell e-handelssida med användarregistrering, orderhantering och admin-panel